Fix content cutoff when test mode banner is collapsed
Remove unnecessary padding from the content body when the test mode banner is in its collapsed state, resolving clipping issues on various pages.

--- a/public/css/quicksms-global-layout.css
+++ b/public/css/quicksms-global-layout.css
@@ -456,8 +456,6 @@ body.qsms-fullbleed .qsms-main {
     height: calc(100vh - 5.3rem);
     display: flex;
     flex-direction: column;
-    overflow: hidden;
-    box-sizing: border-box;
 }
 
 .qsms-fullbleed .qsms-main {
